--- a/css/styles.css
+++ b/css/styles.css
@@ -308,25 +308,32 @@ body {
 }
 
 .our-customers .item {
-    padding: 16px 32px;
-    border: 1px solid #AFB1B8;
-    border-radius: 4px;
+    width: 170px;
+    height: 92px;
 }
 
-.our-customers .item:hover ,
-.our-customers .item:focus  {
-    border: 1px solid var(--accent-color);
-}
 
-.customers-link .customers-icon {
+
+.customers-link {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
     fill: #AFB1B8;
-}
-
-.customers-link:hover .customers-icon,
-.customers-link:focus .customers-icon{
-    fill: var(--accent-color);
+    
+    border: 1px solid #afb1b8;
+    
+    border-radius: 4px;
     
 }
+
+.customers-link:hover,
+.customers-link:focus {
+    fill: #2196f3;
+    border-color: #2196f3;
+}
+
 
 .project {
     font-size: 16px;
@@ -480,6 +487,11 @@ body {
 
 }
 
+/* .contact-link:hover .contact-icon,
+.contact-link:focus .contact-icon {
+    fill: var(--accent-color);
+
+} */
 
 
 /* ========== Header ========== */
